--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4",
+
+    "bower": "^1.8.0",
+
     "jquery": "^1.11.3",
 
     "angular": "^1.6.4",
