--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "angular-ui-bootstrap": "^2.5.0",
 
     "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1",
-    "eslint": "^3.19.0"
+    "jshint-stylish": "^2.2.1"
 
   },
   "repository": {
