--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "PortfolioSite",
   "namelower": "portfoliosite",
   "title": "Jan Koszela",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An portfolio site based on AngularJS",
   "homepage": "https://github.com/pawellinkshell/PortfolioSite",
   "readme": "README.md",
@@ -42,29 +42,36 @@
     "gulp-ignore": "^2.0.2",
     "gulp-rev": "^7.1.2",
     "gulp-bump": "^2.7.0",
+		"gulp-if": "^2.0.2",
+		"gulp-load-plugins": "^1.5.0",
+		"yargs": "^8.0.1",
 
-    "gulp-clean-css": "^3.3.1",
+    "gulp-clean-css": "^3.4.0",
     "gulp-header": "^1.8.8",
     "gulp-install": "^1.1.0",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2",
+    "gulp-uglify": "^3.0.0",
     "gulp-jshint": "^2.0.4",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-concat": "^2.6.1",
     "gulp-changed": "^3.1.0",
     "gulp-imagemin": "^3.2.0",
+		"gulp-useref": "^3.1.2",
 
     "run-sequence": "^1.2.2",
 
     "del": "^2.2.2",
 
-    "browser-sync": "^2.18.11",
-    "gulp-livereload": "^3.8.1",
+    "browser-sync": "^2.18.12",
 
     "editorconfig": "^0.13.2",
-    "npm-check-updates": "^2.11.1"
-  }
+    "npm-check-updates": "^2.11.2"
+  },
+	"scripts": {
+		"run:prod": "gulp run --production",
+		"run": "gulp run"
+	}
 }
